@@ -7,6 +7,8 @@ Changelog
 - The deprecation test for test_suite is no longer needed, as the patched
   setuptools method of gathering metadata as a whole is deprecated.
 
+- `description_content_type` also needs a mapping in the metadata map.
+
 
 4.0b1 (2022-03-28)
 ------------------
